增加DB2数据导入

--- a/_posts/2017-10-19-db2_learn.md
+++ b/_posts/2017-10-19-db2_learn.md
@@ -11,13 +11,20 @@ tag: db2
 
 	编目节点：   db2 "catalog tcpip node P570 remote 10.0.12.34 server 50000"
 	编目数据库： db2 "catalog database BANK as BANK at node P570"
-
+	
 	查看节点编目       db2 list node directory
 	查看数据库编目     db2 list database directory 
-
+	
 	连接远程BANK数据库    db2 connect to BANK user baninst using bankinst
-
+	
 	目录缓存刷新      db2 terminate 
+
+<br>
+
+**将itf/del数据数据文件导入DB2数据库**
+
+	db2"load from '/path/filename.itf' of itf insert/replace into tablename" 
+	insert为追加插入,replace为清空插入
 
 
 <br>
