--- a/_posts/2017-10-19-db2_learn.md
+++ b/_posts/2017-10-19-db2_learn.md
@@ -26,6 +26,39 @@ tag: db2
 	db2"load from '/path/filename.itf' of itf insert/replace into tablename" 
 	insert为追加插入,replace为清空插入
 
+<br>
+
+**DB2 SQL 常用操作**
+
+	db2 connect to sample  连接到sample数据库
+	db2 describe table table_name 查看指定表结构
+
+
+
+**DB2数据库备份恢复**
+
+	mkdir db2_bak  建立备份文件夹
+	db2 backup database example_database_name with 2 buffers buffer 1024 parallelism 1 without prompting; 进去文件夹执行备份命令
+	等待数据库备份结束
+	
+	将备份生成的备份文件上传到服务器的/home/db2inst1/db2_bak文件中
+	建立对应的数据库example_database_name 
+	db2 restore db sample from /home/db2inst1/db2_bak taken at 20150529184633 with 2 buffers buffer 1024 parallelism 1 without prompting; 数据库恢复命令
+	一般为数据文件名 “20150529184633”为备份时间 “001”不了解
+	“TEST”为数据库名，恢复的目标数据库名或别人必须与备份文件中的数据库名相同
+	"/home/db2inst1/db2_bak"为备份文件所在文件夹 
+
+
+**DB2表字段修改**
+
+	alter table XXX alter column XXX drop not null 删除字段非空属性
+	alter table XXX alter column XXX set not null  添加字段非空属性
+	alter table XXX add column XXXX varchar(100)   添加一个新字段
+	alter table XXX drop column XXX                删除一个字段
+	alter table XXX alter column XXX set data type varchar(100) 增加字段的长度
+	
+
+
 
 <br>
 <br>
