修改数据库恢复

--- a/_posts/2017-10-19-db2_learn.md
+++ b/_posts/2017-10-19-db2_learn.md
@@ -43,9 +43,9 @@ tag: db2
 	
 	将备份生成的备份文件上传到服务器的/home/db2inst1/db2_bak文件中
 	建立对应的数据库example_database_name 
-	db2 restore db sample from /home/db2inst1/db2_bak taken at 20150529184633 with 2 buffers buffer 1024 parallelism 1 without prompting; 数据库恢复命令
-	一般为数据文件名 “20150529184633”为备份时间 “001”不了解
-	“TEST”为数据库名，恢复的目标数据库名或别人必须与备份文件中的数据库名相同
+	db2 restore db sample from /home/db2inst1/db2_bak taken at 20150529184633 with 2 buffers buffer 1024 parallelism 1 without prompting; 数据库恢复
+	"20150529184633"为备份时的时间 “001”为不了解
+	"sample"为数据库名，恢复的目标数据库名必须与备份文件中的数据库名相同
 	"/home/db2inst1/db2_bak"为备份文件所在文件夹 
 
 
@@ -56,7 +56,7 @@ tag: db2
 	alter table XXX add column XXXX varchar(100)   添加一个新字段
 	alter table XXX drop column XXX                删除一个字段
 	alter table XXX alter column XXX set data type varchar(100) 增加字段的长度
-	
+
 
 
 
