添加修改知识点

--- a/_posts/2017-10-19-db2_learn.md
+++ b/_posts/2017-10-19-db2_learn.md
@@ -20,6 +20,15 @@ tag: db2
 	目录缓存刷新      db2 terminate 
 
 <br>
+**将表数据导出为del数据文件**  
+
+````
+db2 "export to temp_table.dat of del modified by codepage=1386 
+select ltrim(rtrim(userid)),ltrim(rtrim(username)),'|' from temp_table" > table_export.log
+这里最后加了个'|'来帮助分割数据文件中一条条记录，即|记录一|记录二|记录三|
+
+````
+
 
 **将itf/del数据数据文件导入DB2数据库**
 
