增加知识点

--- a/_posts/2017-10-19-db2_learn.md
+++ b/_posts/2017-10-19-db2_learn.md
@@ -32,7 +32,7 @@ select ltrim(rtrim(userid)),ltrim(rtrim(username)),'|' from temp_table" > table_
 
 **将itf/del数据数据文件导入DB2数据库**
 
-	db2"load from '/path/filename.itf' of itf insert/replace into tablename" 
+	db2"load from '/path/filename.ixf' of ixf insert/replace into tablename" 
 	insert为追加插入,replace为清空插入
 
 <br>
@@ -41,6 +41,11 @@ select ltrim(rtrim(userid)),ltrim(rtrim(username)),'|' from temp_table" > table_
 
 	db2 connect to sample  连接到sample数据库
 	db2 describe table table_name 查看指定表结构
+	db2 drop table table_name 删除表
+	db2 -tvf path/file_name 执行脚本文件
+	db2 alter table table_name alter column col_name set data type varchar(20) 修改表字段的字段类型大小
+	db2 list application show detail 查看当前连接到数据库的应用
+	
 
 
 
