增加本地查看tomcat docker运行应用日志支持

--- a/_posts/2018-01-04-log4j配置.md
+++ b/_posts/2018-01-04-log4j配置.md
@@ -50,7 +50,7 @@ tag: java
 		<param name="ImmediateFlush" value="true"/>
 		<param name="Threshold" value="error"/>
 		<param name="Append" value="true"/>
-		<param name="MaxFileSize" value="30KB"/>
+		<param name="MaxFileSize" value="3000KB"/>
 		<param name="MaxBackupIndex" value="100"/>
 		<param name="encoding" value="utf-8"/>
 		<layout class="org.apache.log4j.PatternLayout">
@@ -65,7 +65,7 @@ tag: java
 		<param name="ImmediateFlush" value="true"/>
 		<param name="Threshold" value="error"/>
 		<param name="Append" value="true"/>
-		<param name="MaxFileSize" value="30KB"/>
+		<param name="MaxFileSize" value="3000KB"/>
 		<param name="MaxBackupIndex" value="100"/>
 		<param name="encoding" value="utf-8"/>
 		<layout class="org.apache.log4j.PatternLayout">
@@ -114,7 +114,8 @@ tag: java
 	</logger>
 
 	<!-- 下面是打印 mybatis sql语句日志的配置 -->
-	<logger name="com.how2java.tmall.mapper">
+	<logger name="com.usthe.tmall.mapper">
+	<!-- TRACE包括SQL查询后的数据,debug不包括 -->
 		<level value="TRACE"/>
 		<appender-ref ref="SqlOutFileAppender"/>
 	</logger>
@@ -135,12 +136,12 @@ tag: java
 **日志开启**  
 
 ````
-在web.xml配置:
+在web.xml配置(试过不配置也行,把log4j.xml放在classpath下):
 
 <!-- log4j -->
     <context-param>
         <param-name>log4jConfigLocation</param-name>
-        <param-value>classpath:log4j-server.xml</param-value>
+        <param-value>classpath:log4j.xml</param-value>
     </context-param>
     <context-param>
         <param-name>log4jRefreshInterval</param-name>
