增加不同数据库数据转换工具

--- a/_posts/2017-10-19-db2_learn.md
+++ b/_posts/2017-10-19-db2_learn.md
@@ -37,6 +37,13 @@ select ltrim(rtrim(userid)),ltrim(rtrim(username)),'|' from temp_table" > table_
 
 <br>
 
+**数据转换工具**  
+
+````
+不同类型数据库之间数据转换,表到表,比较常用db2-->oracle  oracle-->db2
+Data Integration - Kettle
+````
+
 **DB2 SQL 常用操作**
 
 	db2 connect to sample  连接到sample数据库
@@ -45,7 +52,7 @@ select ltrim(rtrim(userid)),ltrim(rtrim(username)),'|' from temp_table" > table_
 	db2 -tvf path/file_name 执行脚本文件
 	db2 alter table table_name alter column col_name set data type varchar(20) 修改表字段的字段类型大小
 	db2 list application show detail 查看当前连接到数据库的应用
-	
+
 
 
 
