--- a/_posts/2018-01-22-仿天猫项目-tmall1-----tmall2.md
+++ b/_posts/2018-01-22-仿天猫项目-tmall1-----tmall2.md
@@ -12,11 +12,14 @@ tag: 项目
 
 <br>
 
-### tmall1  
+### tmall1   
+
 
 项目的基础框架技术：```spring+springmvc+mybatis```  
-```mybatis```逆向工程创建```mapper```，```maven```管理项目资源，```mysql```作为数据库  
-前后端交互采用控制器跳转```jsp```页面方式,数据渲染页面```jstl```.  
+
+```mybatis```逆向工程创建```mapper```,```maven```管理项目资源，```mysql```作为数据库   
+
+前后端交互采用控制器跳转```jsp```页面方式,数据渲染页面```jstl```  
 
 <br>
 后台管理页面:  
