add the cryptoJs

--- a/_posts/2018-03-29-nginx.md
+++ b/_posts/2018-03-29-nginx.md
@@ -12,58 +12,90 @@ tag: 笔记
 
 ````
 
-user    nginx;
-worker_processes    2;
-error_log    /var/log/nginx/error.log warn;
-pid    /var/run/nginx.pid;
-worker_rlimit_nofile    65535;
+user  nginx;
+worker_processes  2;
+
+error_log  /var/log/nginx/error.log info;
+pid        /var/run/nginx.pid;
+
+
 events {
-  worker_connections    1024;
+    use epoll;
+    worker_connections  2048;
 }
+
 http {
-  include    /etc/nginx/mime.types;
-  default_type    application/octet-stream
-  
-  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-  '$status $body_bytes_sent "$http_referer" '
-  '"$http_user_agent" "$http_x_forwarded_for"';
-  access_log  /var/log/nginx/access.log  main;
-  
-  sendfile    on;
-  #tcp_nopush    on;
-  keepalive_timeout    65;
-  #gzip    on;
-  
-  include    /etc/nginx/conf.d/*.conf;
-  
-  
-  upstream bootshiroUpStream {
-    server 127.0.0.1:8080;
-    #server 127.0.0.1:8081;
-  }
-  
-  upstream angularUpStream {
-    server 127.0.0.1:4200;
-  }
-  
-  server {
-    listen    80;
-    server_name    localhost;
-    
-    #charset    koi8-r;
-    #access_log    /etc/nginx/logs/host.access.log main;
-    
-    location / {
-      proxy_pass    http://angularUpStream;
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+	
+
+    keepalive_timeout  65;
+
+    # gzip压缩功能设置
+    gzip on;
+    gzip_min_length 1k;
+    gzip_buffers    4 16k;
+    gzip_http_version 1.0;
+    gzip_comp_level 6;
+    gzip_types text/html text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
+    gzip_vary on;
+	
+	# http_proxy 设置
+    client_max_body_size   10m;
+    client_body_buffer_size   128k;
+    proxy_connect_timeout   75;
+    proxy_send_timeout   75;
+    proxy_read_timeout   75;
+    proxy_buffer_size   4k;
+    proxy_buffers   10 32k;
+    proxy_busy_buffers_size   128k;
+	
+	
+	upstream bootshiro {
+      server    127.0.0.1:8080;
+      #server    127.0.0.1:8081;
     }
-    
-    location ^~ /api {
-      rewrite    ^.+api/?(.*)$ /$1 break;
-      include    uwsgi_params;
-      proxy_pass    http://bootshiroUpStream;
+  
+    upstream angular {
+      server    127.0.0.1:4200;
     }
+  
+    server {
+      listen    80;
+      server_name    localhost;
     
-  }
+      charset    utf-8;
+      #access_log    logs/host.access.log main;
+    
+      location / {
+		
+	    proxy_redirect     off;
+        proxy_set_header  Host  $host:$server_port;
+		proxy_set_header  X-Real-IP  $remote_addr;  
+        proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_pass    http://10.0.75.1:4200;
+      }
+    
+      location /api/ {
+        #后端的Web服务器可以通过X-Forwarded-For获取用户真实IP
+		proxy_redirect     off;
+        proxy_set_header  Host  $host;
+        proxy_set_header  X-Real-IP  $remote_addr;  
+        proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_pass    http://10.0.75.1:8080/;
+	    
+      }
+    
+    }
 }
 
 
