add docker run nginx

--- a/_posts/2018-03-29-nginx.md
+++ b/_posts/2018-03-29-nginx.md
@@ -8,6 +8,19 @@ tag: 笔记
 # nginx学习笔记  
 
 
+## docker运行nginx  
+
+````
+## ---Dockerfile
+FROM nginx:latest
+COPY nginx.conf /etc/nginx/nginx.conf
+
+##run: docker build -t tomsun28/nginx:1.0 .
+##run: docker run -d --restart=always -p 80:80 --name nginx tomsun28/nginx:1.0  
+
+````
+
+
 ## 日常需要的nginx.conf  
 
 ````
