--- a/_posts/2018-03-29-nginx.md
+++ b/_posts/2018-03-29-nginx.md
@@ -16,25 +16,26 @@ FROM nginx:latest
 COPY nginx.conf /etc/nginx/nginx.conf
 
 ##run: docker build -t tomsun28/nginx:1.0 .
-##run: docker run -d --restart=always -p 80:80 --name nginx tomsun28/nginx:1.0  
+##run: docker run -d --restart=always -p 80:80 --name nginx -v /opt/dockerworkspace/log/nginx:/var/log/nginx tomsun28/nginx:1.0  
 
 ````
 
 
-## 日常需要的nginx.conf  
+## 日常作为逆向代理转发nginx所需要的nginx.conf  
 
 ````
-
 user  nginx;
 worker_processes  2;
 
-error_log  /var/log/nginx/error.log info;
+error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
+worker_rlimit_nofile 40000;
 
 events {
     use epoll;
-    worker_connections  2048;
+    worker_connections  8096;
+	multi_accept on;
 }
 
 http {
@@ -47,41 +48,31 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    #tcp_nopush     on;
+    sendfile           on;
+    tcp_nopush         on;
+    tcp_nodelay        on;
+	keepalive_timeout  15;
 	
-
-    keepalive_timeout  65;
-
     # gzip压缩功能设置
     gzip on;
     gzip_min_length 1k;
-    gzip_buffers    4 16k;
-    gzip_http_version 1.0;
+    gzip_buffers    4 32k;
+    gzip_http_version 1.1;
     gzip_comp_level 6;
     gzip_types text/html text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
     gzip_vary on;
-	
-	# http_proxy 设置
-    client_max_body_size   10m;
-    client_body_buffer_size   128k;
-    proxy_connect_timeout   75;
-    proxy_send_timeout   75;
-    proxy_read_timeout   75;
-    proxy_buffer_size   4k;
-    proxy_buffers   10 32k;
-    proxy_busy_buffers_size   128k;
-	
-	
+			
 	upstream bootshiro {
-      server    127.0.0.1:8080;
+      server    10.0.75.1:8080;
       #server    127.0.0.1:8081;
     }
   
     upstream angular {
-      server    127.0.0.1:4200;
+      server    10.0.75.1:4200;
     }
-  
+    # 缓存配置
+   	proxy_cache_path /tmp/cache levels=1:2 keys_zone=my_cache:30m max_size=1G;
+
     server {
       listen    80;
       server_name    localhost;
@@ -91,22 +82,42 @@ http {
     
       location / {
 		
-	    proxy_redirect     off;
+		proxy_pass    http://angular;
+	    
+		proxy_redirect     off;
         proxy_set_header  Host  $host:$server_port;
-		proxy_set_header  X-Real-IP  $remote_addr;  
-        proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
-        proxy_pass    http://10.0.75.1:4200;
+        
+		proxy_buffering on;
+	    proxy_buffer_size   4k;
+        proxy_buffers   4 32k;
+        proxy_busy_buffers_size   64k;
+		proxy_temp_file_write_size 64k;
+		
       }
     
       location /api/ {
         #后端的Web服务器可以通过X-Forwarded-For获取用户真实IP
+		proxy_pass    http://bootshiro/;
 		proxy_redirect     off;
         proxy_set_header  Host  $host;
         proxy_set_header  X-Real-IP  $remote_addr;  
         proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
-        proxy_pass    http://10.0.75.1:8080/;
+        
+		proxy_buffer_size   4k;
+        proxy_buffers   4 32k;
+        proxy_busy_buffers_size   64k;
+		proxy_temp_file_write_size 64k;
 	    
       }
+	  #对静态资源缓存
+	  #location ~* \.(html|css|jpg|gif|ico|js)$ {
+      #  proxy_cache          my_cache;
+      #  proxy_cache_key      $host$uri$is_args$args;
+      #  proxy_cache_valid    200 301 302 30m;
+      #  expires              30m;
+      #  proxy_pass  http://angular;
+	  #}
+	  
     
     }
 }
