修改图片路径

--- a/_posts/2018-04-12-api权限管理小系统与前后端分离实践 .md
+++ b/_posts/2018-04-12-api权限管理小系统与前后端分离实践 .md
@@ -15,7 +15,7 @@ tag: 项目
 ### 项目的基础框架设计：    
 
 ```总的长这样~```:  
-![image1](D:\github\tomsun28.github.io\images\posts\api\image1.PNG)  
+![image1](/images/posts/api/image1.PNG)  
 
 <br>
 
@@ -37,7 +37,7 @@ tag: 项目
 #### 持续集成  
 
 ```流程长这样~```  
-![image1](D:\github\tomsun28.github.io\images\posts\api\image2.PNG)  
+![image1](/images/posts/api/image2.PNG)  
 
 详细实现技术见另一篇:  [docker学习](usthe.com/2017/12/docker_learn/)  
 
