标记持续更新

--- a/_posts/2018-04-12-api权限管理小系统与前后端分离实践 .md
+++ b/_posts/2018-04-12-api权限管理小系统与前后端分离实践 .md
@@ -47,9 +47,14 @@ tag: 项目
 
 对加密认证签发，api动态权限，token过期刷新，前后端交互等等实现的细节，慢慢更。  
 <br>
+<br>
 
-#### 动态加密认证  
+#### 动态加密认证     
 
+<br>
+<br>
+
+。。。。。持续更新中。。。。
 
 
 
@@ -61,6 +66,8 @@ tag: 项目
 [github代码usthe](https://github.com/tomsun28/usthe)  
 
 <br>
-
+<br>
+<br>
+<br>
 
 *转载请注明* [from tomsun28](http://usthe.com)
