--- a/_posts/2018-04-12-api权限管理小系统与前后端分离实践 .md
+++ b/_posts/2018-04-12-api权限管理小系统与前后端分离实践 .md
@@ -10,11 +10,15 @@ tag: 项目
 
 ## 自己在前后端分离上的实践    
 
-要想实现完整的前后端分离，安全这块是绕不开的，这个系统主要功能就是动态restful api管理，这次实践包含两个模块,基于```springBoot + shiro```搭建的权限管理系统后台**bootshiro**, ```angular5 + typeScript```编写的前端管理**usthe**。(ps:考虑到我幼小的心灵和水平,大神误喷啊^_^~)  
+要想实现完整的前后端分离，安全这块是绕不开的，这个系统主要功能就是动态restful api管理，这次实践包含两个模块,基于```springBoot + shiro```搭建的权限管理系统后台**bootshiro**, ```angular5 + typeScript```编写的前端管理**usthe**。(ps:考虑到我幼小的心灵和水平,大神误喷啊^_^~)   
 
-### 项目的基础框架设计：    
 
-```总的长这样~```:   
+### 项目的基础框架设计：  
+
+
+````总的长这样~:````  
+
+
 
 ![image1](/images/posts/api/image1.PNG)  
 
@@ -57,7 +61,7 @@ tag: 项目
 
 ![image3](/images/posts/api/image3.PNG)  
 
-由于介绍的是动态加密认证方案，这里并不会涉及认证之后的JWT签发等。  
+由于介绍的是动态加密解密传输信息方案，这里并不会涉及之后的JWT签发等。  
 下面是实现细节:  
 angular 前端发送get动态秘钥请求后会对对象进行监听，在回调函数里获取后端返回的秘钥后再进行加密处理，之后再发送登录请求。在angular我把请求服务化了，下面的代码片段会有点凌乱。  
 
@@ -121,7 +125,7 @@ export class LoginService {
   }
 }
 
-````  
+````
 
 后端是在一个filter中对登录注册请求进行拦截，判断其是正常登录注册还是获取动态加密秘钥请求，正常认证就走shiro，判断为获取秘钥则生成16随机码```默认AES加密秘钥为约定16位，小于16位会报错```，将秘钥以<远程IP，秘钥>的<key,value>形式存储到redis，设置其有效时间为5秒```5秒看自己情况不要太大也不要太短，设置有效期是为了防止被其他人截取到加密密码冒充用户的情况，把风险降更低```。  
 
