--- a/_posts/2018-04-12-api权限管理小系统与前后端分离实践 .md
+++ b/_posts/2018-04-12-api权限管理小系统与前后端分离实践 .md
@@ -38,7 +38,7 @@ tag: 项目
 
 #### 持续集成  
 
-```流程长这样~```    
+流程长这样~：    
 
 ![image2](/images/posts/api/image2.PNG)  
 
@@ -54,7 +54,8 @@ tag: 项目
 #### 密码动态加密解密     
 
 在用户密码登录认证中,明文传输用户输入的密码是不可取的。在没有用https的情况下，这里需要对用户密码加密传输，保证即使密码泄露也不影响。  
-```这里的前后端加密解密下图:```    
+
+这里的前后端加密解密下图:     
 
 ![image3](/images/posts/api/image3.PNG)  
 
