--- a/_posts/2018-04-22-签发的用户认证token超时刷新策略.md
+++ b/_posts/2018-04-22-签发的用户认证token超时刷新策略.md
@@ -226,7 +226,7 @@ github:
 <br>
 持续更新。。。。。。
 <br>
-<br>
-<br>
+
+**分享一波阿里云代金券[快速上云](https://promotion.aliyun.com/ntms/act/ambassador/sharetouser.html?userCode=rjlzz3uf&utm_source=rjlzz3uf)**   
 
 *转载请注明* [from tomsun28](http://usthe.com)
