--- a/_posts/2018-07-16-2018一半小结一波.md
+++ b/_posts/2018-07-16-2018一半小结一波.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title:  写在2018年中
+title:  2018一半小结一波
 date: 2018-07-16
 tag: talk
 ---
 
+<br>
+<br>
 
 
 2018值得开心的是有个项目居然gvp了，更开心的是从杭州到成都来打工了，这样以后离家近离研山图图近离高中还有初中玩了那么多年的朋友也近，反正都好近哈哈。跟研山图图去了福建去了广东，在东山岛是玩得最舒服最开心的。  
