--- a/_posts/2017-10-09-git_learn.md
+++ b/_posts/2017-10-09-git_learn.md
@@ -7,6 +7,98 @@ tag: linux
 
 ## Git 常用命令(来自网络)
 
+#### PR常用命令  
+
+    # 设置远程贡献仓库
+    # git remote add upstream https://github.com/apache/shiro.git  
+    # 创建并进入一个新特性分支
+    # git checkout -b feature_x
+    # 在这个分支上add commit 代码
+    # (make your changes) ... 
+    
+    # 下载远程master仓库的所有变动
+    # git fetch upstream
+    # rebase本地提交记录到head
+    # git rebase upstream/master
+    # 解决冲突后git add , git rebase --continue, git rebase --skip
+    
+    # 将本地的几个commit合并为一个统一的commit -- git squash技术
+    # 查看当前head日志，需要合并几个我们本地提交的commit
+    # git log
+    # 例:这个特性分支本地提交了3个commit
+    # 将从顶HEAD到下的3个commit合并,进入合并编辑页面
+    # git rebase -i HEAD~3 
+    # 出现以下编辑页面，将需要压缩的commit的pick都改为s,但至少要留一个commit pick
+
+````
+pick e61a29c fix the potential threat 
+pick bcc5a89 add shiro 682 utests      -- 改动前
+s bcc5a89 add shiro 682 utests         -- 改动后
+pick 30865bb modify shiro 682 utests   -- 改动前
+s 30865bb modify shiro 682 utests      -- 改动后
+
+# Rebase 4c2027a..30865bb onto 4c2027a (3 command(s))
+#
+# Commands:
+# p, pick = use commit
+# r, reword = use commit, but edit the commit message
+# e, edit = use commit, but stop for amending
+# s, squash = use commit, but meld into previous commit
+# f, fixup = like "squash", but discard this commit's log message
+# x, exec = run command (the rest of the line) using shell
+# d, drop = remove commit
+#
+# These lines can be re-ordered; they are executed from top to bottom.
+#
+# If you remove a line here THAT COMMIT WILL BE LOST.
+#
+# However, if you remove everything, the rebase will be aborted.
+````
+    # 修改完后 Esc :wq 保存退出, 如果成功即进入message编辑页面  
+
+````
+# This is a combination of 3 commits.
+# The first commit's message is:
+fix the potential threat when use  "uri = uri + '/' " to bypassed shiro protect
+add shiro 682 utests
+
+# This is the 2nd commit message:
+
+add shiro 682 utests
+
+# This is the 3rd commit message:
+
+modify shiro 682 utests
+
+# Please enter the commit message for your changes. Lines starting
+# with '#' will be ignored, and an empty message aborts the commit.
+#
+# Date:      Mon Mar 25 12:47:14 2019 +0800
+#
+# interactive rebase in progress; onto 4c2027a
+# Last commands done (3 commands done):
+#    s bcc5a89 add shiro 682 utests
+#    s 30865bb modify shiro 682 utests  
+````
+    # 更改这三个commit message，最好将空行删除，统一下PR的message
+    # 修改完后 Esc :wq 保存退出OK
+    
+    # 将本地分支推到远程自己的仓库
+    # git push -u origin feature_x 
+    # 强制退，覆盖远程仓库
+    # git push -u -f origin feature_x
+    
+    # 在页面上点击 create pull request，提交PR
+    # PR在讨论中需要改动，直接改动这个PR feature_x分支推到远程仓库即可
+    
+    # PR被接收后
+    # git checkout master
+    # 删除本地特性分支
+    # git branch -D feature_x
+    # 删除远程特性分支
+    # git push origin :feature_x
+
+
 #### 仓库
     # 在当前目录新建一个Git代码库
     $ git init
@@ -144,7 +236,7 @@ tag: linux
     
     # 新建一个分支，指向某个tag
     $ git checkout -b [branch] [tag]  
-    
+
 #### 查看信息  
 
     # 显示有变更的文件
@@ -207,7 +299,7 @@ tag: linux
     
     # 显示当前分支的最近几次提交
     $ git reflog  
-    
+
 #### 远程同步  
 
     # 下载远程仓库的所有变动
@@ -233,7 +325,7 @@ tag: linux
     
     # 推送所有分支到远程仓库
     $ git push [remote] --all  
-    
+
 #### 撤销  
 
     # 恢复暂存区的指定文件到工作区
@@ -267,3 +359,6 @@ tag: linux
     暂时将未提交的变化移除，稍后再移入
     $ git stash
     $ git stash pop
+````
+
+````
