add git stash detail

--- a/_posts/2017-10-09-git_learn.md
+++ b/_posts/2017-10-09-git_learn.md
@@ -5,7 +5,7 @@ date: 2017-10-09
 tag: linux
 ---
 
-## Git 常用命令(来自网络)
+## Git 常用命令
 
 #### PR常用命令  
 
@@ -99,6 +99,21 @@ modify shiro 682 utests
     # git push origin :feature_x
 
 
+#### git stash 暂存  
+
+    # 想到另一分支解决问题,暂存当前分支的一些修改,不提交
+    # git stash  或者  git stash save "stash-cmd-test"
+    
+    # 查看当前分支现有的stash暂存
+    # git stash list
+    
+    # 另一分支修改完成后,切换到原来分支,恢复之前暂存的修改
+    # git stash pop(会删除弹出的stash) 或者 git stash apply(不会删除stash)
+    
+    # 从当前分支的stash创建一个新分支,新分支会应用stash
+    # git stash branch newbranch
+    
+    
 #### 仓库
     # 在当前目录新建一个Git代码库
     $ git init
