--- a/_posts/2020-02-23-tcp_udp.md
+++ b/_posts/2020-02-23-tcp_udp.md
@@ -38,13 +38,10 @@ tcp udp位于网络通信协议的第四层 - 传输层
 > http/https ftp pop3  
 
 * 三次建立连接  
+![tcp_hand](/images/posts/tcp_udp/tcp_hand.svg)  
 
-todo pic
-
-
-* 四次断开连接
-
-todo pic
+* 四次断开连接  
+![tcp_unhand](/images/posts/tcp_udp/tcp_unhand.svg)  
 
 * 高可靠性  
 > SEQ-ACK - 序列号和确认应答号保证了消息的接收和失败重传  
