change sureness version

--- a/_posts/2020-03-09-sureness.md
+++ b/_posts/2020-03-09-sureness.md
@@ -6,11 +6,11 @@ tag: sureness
 ---
 <br>
 
-# `sureness` - 面向`restful api`的权限包  
+## `sureness` - 面向`restful api`的权限包  
 
 [仓库地址](https://github.com/tomsun28/sureness)  
 
-## <font color="green">`Introduction`</font>
+### <font color="green">`Introduction`</font>
 
 > `sureness` 是作者在使用`java`权限框架`shiro`之后,吸取其良好的设计加上一些自己想法实现的全新认证鉴权项目  
 >  面对`restful api`的认证鉴权,基于`RABC`主要关注于对`restful api`的保护  
@@ -44,13 +44,13 @@ tag: sureness
 <dependency>
     <groupId>com.usthe.sureness</groupId>
     <artifactId>sureness-core</artifactId>
-    <version>0.0.2.1</version>
+    <version>0.0.2.2</version>
 </dependency>
 ```
 
 `gradle`坐标  
 ```
-compile group: 'com.usthe.sureness', name: 'sureness-core', version: '0.0.2.1'
+compile group: 'com.usthe.sureness', name: 'sureness-core', version: '0.0.2.2'
 ```
 
 入口,一般放在拦截所有请求的`filter`:  
