--- a/_posts/2020-02-23-tcp_udp.md
+++ b/_posts/2020-02-23-tcp_udp.md
@@ -79,6 +79,10 @@ tcp udp位于网络通信协议的第四层 - 传输层
 > 用于数据可靠性要求不高的音视频场景，广播通讯场景  
 > 上层应用协议 dns snmp ntp  
 
+<br>  
+
+相关好文:  
+[tcp之recv/send和滑动窗口知识学习](https://www.cnblogs.com/lisuyun/articles/5803352.html)  
 
 <br>
 <br>
