add jdbc spi deadlock

--- a/_posts/2020-09-20-多线程初始化JDBC造成的死锁.md
+++ b/_posts/2020-09-20-多线程初始化JDBC造成的死锁.md
@@ -5,10 +5,9 @@ date: 2020-09-20
 tag: java
 ---
 
-###  多线程初始化JDBC造成的死锁  
+###  多线程初始化JDBC造成的死锁   
 
-![image1](/images/posts/deadlock/jdbc-deadlock.PNG)   
-
+![image1](/images/posts/deadlock/jdbc-deadlock.png)   
 
 
 
@@ -20,3 +19,4 @@ tag: java
 
 <br>
 *转载请注明* [from tomsun28](http://usthe.com)  
+
