add git commit --amend

--- a/_posts/2017-10-09-git_learn.md
+++ b/_posts/2017-10-09-git_learn.md
@@ -112,8 +112,22 @@ modify shiro 682 utests
     
     # 从当前分支的stash创建一个新分支,新分支会应用stash
     # git stash branch newbranch
+
+
+#### git commit --amend 修改已提交的日志  
+
+    # 修改最后一次提交  
+    # git commit --amend  
+    # git push origin master --force  
     
+    # 修改其他旧的提交  
+    # git rebase -i HEAD~3(它会打开一个编辑器，它会把最后前3次的提交显示出来)  
+    # 定位到你要编辑日志的那一行，把pick修改为edit，然后保存。
+    # git commit --amend(修改日志内容)    
+    # git rebase --continue(git rebase会让你在一个新的分支修改内容。 git rebase --continue则是让你修改完后重新回到之前的分支)   
+    # git push origin master --force  
     
+​    
 #### 仓库
     # 在当前目录新建一个Git代码库
     $ git init
