add reset --hard origin/master

--- a/_posts/2017-10-09-git_learn.md
+++ b/_posts/2017-10-09-git_learn.md
@@ -126,7 +126,7 @@ modify shiro 682 utests
     # git commit --amend(修改日志内容)    
     # git rebase --continue(git rebase会让你在一个新的分支修改内容。 git rebase --continue则是让你修改完后重新回到之前的分支)   
     # git push origin master --force  
-    
+
 ​    
 #### 仓库
     # 在当前目录新建一个Git代码库
@@ -377,6 +377,9 @@ modify shiro 682 utests
     
     # 重置当前分支的HEAD为指定commit，同时重置暂存区和工作区，与指定commit一致
     $ git reset --hard [commit]
+    
+    # 远程分支强制覆盖本地,丢弃本地修改    
+    $ get reset --hard origin/master    
     
     # 重置当前HEAD为指定commit，但保持暂存区和工作区不变
     $ git reset --keep [commit]
